# docx-cli

./: .gitignore  Cargo.toml  README.md  docxai-PRD.md  fix_plan.md
.github/workflows/: ci.yml  release.yml
.ralph/: AGENT.md  fix_plan.md
skills/editing-docx-with-docxai/: SKILL.md
skills/editing-docx-with-docxai/references/: reference.md
src/: cli.rs  doc.rs  equation.rs  error.rs  image.rs  lib.rs  main.rs  markdown.rs  mutate.rs  refs.rs  skills.rs  snapshot.rs  styles.rs
tests/: cli_smoke.rs  edge_cases.rs
