[package]
name = "docxai"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
authors = ["docxai contributors"]
description = "CLI for AI agents to create and modify .docx files via a minimal, deterministic, composable surface."
license = "Apache-2.0"
repository = "https://github.com/docxai/docxai"
readme = "README.md"
keywords = ["docx", "ooxml", "word", "cli", "agent"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "docxai"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
quick-xml = { version = "0.36", features = ["serialize"] }
zip = { version = "2", default-features = false, features = ["deflate", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
pulldown-cmark = { version = "0.12", default-features = false }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["json"] }
pretty_assertions = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
